about.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');

.card-holder {
     margin-top: 30px;
     display: flex;
     flex-direction: row;
     column-gap: 30px;
     justify-content: center;
     width: 100vw;
     flex-wrap: wrap;
}
.card {
     background-color: #204534;
     height: 200px;
     width: 200px;
     border-radius: 10px;
     color: #CBA669;
     text-align: center;
     font-family: Montserrat, sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: center;
}

.explanation {
     margin-top: 10px;
     font-size: 20px;
}
.emphasis {
     font-size: 30px;
}
.bolded {
     text-align: center;
     font-family: Montserrat, sans-serif;
     font-size: 30px;
     margin-top: 50px;
}

.important-cont {
     display: flex;
     justify-content: center;
}
.important-cont img {
     max-width: 400px;
     margin-top: 30px;
}
#finisher {
     margin-top: 100px;
     color: #F8F4EB;
}

.work {
     margin-top: 10px;
     margin-left: 10%;
     width: 80%;
     font-family: Montserrat, sans-serif;
     font-size: 20px;
}

